# hello-rust

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Rocket.toml  bin.mk  cargo.mk  dev.mk  docker.mk
.devcontainer/: devcontainer.json
experiment/macros/: Cargo.toml
experiment/macros/src/: lib.rs  main.rs
experiment/proc_macro/: Cargo.toml
experiment/proc_macro/src/: lib.rs
proc_macro/: Cargo.toml
proc_macro/src/: lib.rs  main.rs
project/hello/: Cargo.toml
project/hello-world/: Cargo.toml
project/hello/src/: main.rs  models.rs  ownership.rs
project/tutorial/rocket/responses/: Rocket.toml
project/tutorial/rocket/responses/src/: main.rs
project/tutorial/rocket/responses/template/: base.html.tera  index.html.tera
src/: branches.rs  functions.rs  hello-rocket.rs  main.rs  ownership.rs  rand.rs  ref-and-borrow.rs  rocket-requests.rs  routes.rs  slices.rs  variables.rs
tutorial/rocket/responses/: Cargo.toml
tutorial/rocket/responses/src/: main.rs
