[package]
name = "hello"
version = "0.1.0"
authors = ["tamakiii"]
edition = "2018"

[[bin]]
name = "rand"
path = "src/rand.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.2"
reroute = "0.4.1"
tokio = { version = "0.2.11", features = ["full"] }
pretty_env_logger = "0.4.0"
rand = "0.7.3"
