[package]
name = "hello"
version = "0.1.0"
authors = ["tamakiii"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.2"
reroute = "0.4.1"
tokio = { version = "0.2.11", features = ["full"] }
pretty_env_logger = "0.4.0"
rand = "0.7.3"

# bins

[[bin]]
name = "rand"
path = "src/rand.rs"

[[bin]]
name = "variables"
path = "src/variables.rs"

[[bin]]
name = "functions"
path = "src/functions.rs"

[[bin]]
name = "branches"
path = "src/branches.rs"

[[bin]]
name = "ownership"
path = "src/ownership.rs"
[[bin]]
name = "ref-and-borrow"
path = "src/ref-and-borrow.rs"
[[bin]]
name = "slices"
path = "src/slices.rs"
