[package]
name = "proc_macro"
version = "0.1.0"
authors = ["tamakiii <tamakiii@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.15", features = ["full", "extra-traits"] }

[lib]
proc-macro = true
