[package]
name = "responses"
version = "0.1.0"
authors = ["tamakiii <tamakiii@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

[dependencies.rocket_contrib]
version = "0.4.2"
features = ["handlebars_templates", "tera_templates"]